weatherapp_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-service
  namespace: weatherapp
spec:
  selector:
    app: weatherapp-pod
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
