weatherapp_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ingress
  namespace: weatherapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: weatherapp.local
  #- host: weatherapp.farrellsoft.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: weatherapp-service
            port: 
              number: 80
